--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
   ],
 
   "rules": {
+    "arrow-spacing":"warn",
     "block-scoped-var": 2,
     "brace-style": [2, "1tbs", { "allowSingleLine": true }],
     "camelcase": [2, { "properties": "always" }],
@@ -151,7 +152,7 @@
     "no-unused-expressions": 0,
     "no-unused-vars": [2, { "vars": "all", "args": "none" }],
     "no-use-before-define": 2,
-    "no-var": 0,
+    "no-var": "warn",
     "no-void": 0,
     "no-warning-comments": 0,
     "no-with": 2,
