--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
   "scripts": {
     "build": "webpack --env build",
     "dev": "webpack --progress --colors --watch --env dev",
-    "test": "mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
-    "test:watch": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
+    "test": "nyc --reporter=html mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
+    "test:watch": "nyc --reporter=html mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
+    "babel-istanbul": "^0.12.2",
     "babel-loader": "7.0.0",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-preset-es2015": "6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "6.24.1",
     "chai": "3.5.0",
     "eslint": "3.19.0",
     "eslint-loader": "1.7.1",
     "mocha": "3.3.0",
+    "nyc": "^11.0.3",
+    "typescript": "^2.4.1",
     "webpack": "2.4.1",
     "yargs": "7.1.0"
   },
