--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "webpack --env build",
     "dev": "webpack --progress --colors --watch --env dev",
-    "test": "nyc --reporter=html mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
-    "test:watch": "nyc --reporter=html mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
+    "test": "nyc --reporter=lcov mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
+    "test:watch": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
   "dependencies": {},
   "devDependencies": {
