updated packages and fixed errors

--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
   "name": "loq",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "es2015 implementation of linq",
   "main": "lib/loq.js",
-  "types": "lib/loq.d.ts",  
+  "types": "lib/loq.d.ts",
   "scripts": {
-    "build": "webpack --env build && cp -f ./src/loq.d.ts ./lib",
-    "dev": "webpack --progress --colors --watch --env dev",
+    "build": "webpack --mode=production --optimize-minimize --env build && cp -f ./src/loq.d.ts ./lib",
+    "dev": "webpack --mode=development --progress --colors --watch --env dev",
     "test": "nyc --reporter=html mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
     "test:watch": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
   },
-  "dependencies": {},
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.24.1",
-    "babel-eslint": "7.2.3",
-    "babel-istanbul": "^0.12.2",
-    "babel-loader": "7.0.0",
+    "awesome-typescript-loader": "5.0.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.3",
+    "babel-istanbul": "0.12.2",
+    "babel-loader": "7.1.4",
     "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
-    "chai": "3.5.0",
-    "eslint": "3.19.0",
-    "eslint-loader": "1.7.1",
-    "mocha": "3.3.0",
-    "nyc": "^11.0.3",
-    "typescript": "^2.5.3",
-    "webpack": "2.4.1",
-    "yargs": "7.1.0",
-    "awesome-typescript-loader": "3.2.3"
+    "chai": "4.1.2",
+    "eslint": "4.19.1",
+    "eslint-loader": "2.0.0",
+    "mocha": "5.1.1",
+    "nyc": "11.8.0",
+    "typescript": "2.8.3",
+    "webpack": "4.8.3",
+    "webpack-cli": "^2.1.3",
+    "yargs": "11.0.0"
   },
   "repository": {
     "type": "git",
